<resources>
    <string name="app_name">Idea Note</string>

    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="reset_password_description">Forgot your password? Please enter your email address. You will receive a link to create a new password via email.</string>
    <string name="change_password">Change Password</string>
    <string name="password_is_not_valid">Password is not valid.</string>
    <string name="passwords_does_not_match">Passwords does not match.</string>
    <string name="password_updated_successfully">Password updated successfully.</string>
    <string name="password_update_failed">Password update failed.</string>
    <string name="password_is_not_correct">Password is not correct.</string>
    <string name="reset_password">Reset Password.</string>
    <string name="invalid_password">Invalid password.</string>

    <string name="sign_out">Sign out</string>
    <string name="sign_out_message">Are you sure you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm?</string>

    <string name="upload_successful">Upload successful.</string>
    <string name="upload_failed">Upload failed.</string>
    <string name="load_data_failed">Load data failed.</string>
    <string name="do_you_want_to_delete_this_note">Do you want to delete this note?</string>

    <string name="get_email">Get email.</string>
    <string name="email_sent">Email sent.</string>
    <string name="failed_to_send_email">Failed to send email.</string>
    <string name="invalid_email_address">Invalid email address.</string>
    <string name="incorrect_email_or_password">Incorrect email or password.</string>
    <string name="sign_up_successfully">Sign up successfully.</string>
    <string name="sign_up_failed">Sign up failed.</string>
    <string name="note_saved">Note saved.</string>
    <string name="note_is_note_saved">Note is note saved.</string>
    <string name="note_deleted">Note deleted.</string>
    <string name="note_is_not_deleted">Note is not deleted.</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="search_notes">Search notes…</string>
    <string name="no_notes">There is no note</string>
    <string name="note_title">Note title…</string>
    <string name="note_subtitle">Note subtitle…</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?.</string>
    <string name="sign_up">Sign up</string>
    <string name="app_description">A note app by Arny</string>
    <string name="already_have_an_account">Already have an account?.</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="pin">Pin</string>
    <string name="delete">Delete</string>
    <string name="time">Time</string>
    <string name="channel_name">CHANEL_ID_NOTIFICATION</string>
</resources>