<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:src="@drawable/ic_back" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avt"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_below="@+id/btnBack"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_user"
        app:shapeAppearanceOverlay="@style/circle" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avt"
        android:layout_marginTop="@dimen/margin"
        android:gravity="center"
        android:text="@string/email"
        android:textSize="@dimen/noteTitle" />

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_below="@+id/tvEmail"
        android:layout_marginTop="@dimen/margin" />

    <TextView
        android:id="@+id/tvChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin"
        android:gravity="center"
        android:text="@string/change_password"
        android:textSize="@dimen/noteTitle" />

    <TextView
        android:id="@+id/tvSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvChangePassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin"
        android:gravity="center"
        android:text="@string/sign_out"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:textSize="@dimen/noteTitle" />


</RelativeLayout>